2004-08-12 Seth Woolley <seth@tautology.org>
	* gv-3.5.8-debian.diff: added debian patch to fix recent security vuln.
	* BUILD: apply debian patch.  SECURITY FIX
	* DETAILS: Updated UPDATED

2003-10-30 Eric Sandall <eric@sandall.us>
	* DEPENDS: Upper-case provides

2003-10-20 Jason Flatt <jason@flattfamily.com>
	* HISTORY: Reformatted this file based on new standard.

2003-07-11 Jason Flatt <jason@flattfamily.com>
	* BUILD: Fixed fix. (Missing "./" in front of inc_2lit.)

2003-07-11 hgg <hgreig@bigpond.net.au>
	* BUILD: Add fix for gcc3.3 bug (from adino on IRC).

2003-05-19 Jason Flatt <jason@flattfamily.com>
	* BUILS: Update for ${INSTALL_ROOT}.

2003-04-03 Jason Flatt <jason@flattfamily.com>
	* DETAILS: Added http://bsd.tucows.stop.hu/files/$SOURCE SOURCE_URL.
	  (Thanks to Michal Karas <largon@seznam.cz>.)

2002-10-14 Jason Flatt <jasonflatt@wizard.com>
	* DEPENDS: Modified to address bug #1180.

2002-10-14 Jason Flatt <jasonflatt@wizard.com>
	* DETAILS: Sorry folks! I forgot to update the UPDATED field when I did
	  the last bug fix.

2002-10-01 Jason Flatt <jasonflatt@wizard.com>
	* Included patch for security fix. Addresses bug #1113.

2002-08-27 Jason Flatt <jasonflatt@wizard.com>
	* DEPENDS: Changed to use postscript-interpreter.
	* HISTORY: Reformatted this file.

2002-08-02 Jason Flatt <jasonflatt@wizard.com>
	* DETAILS: Changed LICENSE= and MD5= to LICENSE[x]= and MD5[x]=.
	* HISTORY: Reformatted this file.

2002-06-23 Jason Flatt <jasonflatt@wizard.com>
	* DETAILS: Added LICENSE and MD5 to DETAILS.

2002-06-10 Jason Flatt <jasonflatt@wizard.com>
	* USEGCC2: Removed as it compiles w/gcc 3.1 and executes.

2002-05-29 Jason Flatt <jasonflatt@wizard.com>
	* USEGCC2: Added in preparation for gcc3 upgrade.

2002-05-08 Jason Flatt <jasonflatt@wizard.com>
	* HISTORY: Reformatted to conform to new template.

2002-05-07 Jason Flatt <jasonflatt@wizard.com>
	* BUILD: Added && after make [...] install as per Jerome Zago.
