@@ -1,3 +1,7 @@
+2004-08-16 Jason Flatt <jason@flattfamily.com>
+	* gv-3.5.8-debian.diff: Corrected with patch supplied by neuron
+	  (bug # 7245).
+
 2004-08-12 Seth Woolley <seth@tautology.org>
 	* gv-3.5.8-debian.diff: added debian patch to fix recent security vuln.
 	* BUILD: apply debian patch.  SECURITY FIX
